--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>org.trustdeck</groupId>
 	<artifactId>client</artifactId>
-	<version>0.4.0-BETA</version>
+	<version>0.5.0-BETA</version>
 	<packaging>jar</packaging>
 	<name>TrustDeck Client Library</name>
 	<description>A client library for interacting with the TrustDeck services.</description>
@@ -39,7 +39,7 @@
 			<version>6.2.8</version>
 		</dependency>
 		
-		<!-- Logging (License: Apache 2.0) -->
+		<!-- Authentication (License: Apache 2.0) -->
 		<dependency>
 			<groupId>org.keycloak</groupId>
 			<artifactId>keycloak-admin-client</artifactId>
@@ -54,7 +54,7 @@
 			<version>1.18.38</version>
 		</dependency>
 		
-		<!-- Logging (License: Apache 2.0) -->
+		<!-- JSON manipulation for model representation (License: Apache 2.0) -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
